--- a/HW 6/HW6.ipynb
+++ b/HW 6/HW6.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These data were collected by Davis et al. in the 1930s. They represent observed attendance at 14 social events by 18 Southern women. ROW LABELS: a woman's name, COLUMN LABELS: # of club. The following is to load data from github link. "
+    "These data were collected by Davis et al. in the 1930s. They represent observed attendance at 14 social events by 18 Southern women. ROW LABELS: a woman's name, COLUMN LABELS: the number of club. The following is to load data from github link. "
    ]
   },
   {
@@ -121,10 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
     "import networkx.algorithms.bipartite as bipartite"
@@ -134,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following is use nx.graph() graph generator function to collect nodes (vertices) along with (from, to) pairs of nodes. In this data set, we may see 'From' node data is the number representing a woman, and 'To' node data is representing an event for that woman attented. The graph is bipartite (clubs, women). There is an edge for every woman who participates in an event. The first column contains the women, the second column contains the events."
+    "The following is use nx.graph() graph generator function to collect nodes (vertices) along with (from, to) pairs of nodes. In this data set, we may see 'From' node data is the number representing a woman, and 'To' node data is representing an event for that woman attented. The graph is bipartite (clubs, women). There is an edge for every woman who participates in an event. The first column contains the women, the second column contains the clubs."
    ]
   },
   {
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -402,53 +403,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Evelyn Jefferson': 0.5166666666666667,\n",
-       " 'Laura Mandeville': 0.4696969696969697,\n",
-       " 'Theresa Anderson': 0.5166666666666667,\n",
-       " 'Brenda Rogers': 0.4696969696969697,\n",
-       " 'Charlotte McDowd': 0.3875,\n",
-       " 'Frances Anderson': 0.4305555555555556,\n",
-       " 'Eleanor Nye': 0.4305555555555556,\n",
-       " 'Pearl Oglethorpe': 0.4305555555555556,\n",
-       " 'Ruth DeSand': 0.45588235294117646,\n",
-       " 'Verne Sanderson': 0.45588235294117646,\n",
-       " 'Myra Liddel': 0.44285714285714284,\n",
-       " 'Katherina Rogers': 0.4696969696969697,\n",
-       " 'Sylvia Avondale': 0.5,\n",
-       " 'Nora Fayette': 0.5166666666666667,\n",
-       " 'Helen Lloyd': 0.4696969696969697,\n",
-       " 'Dorothy Murchison': 0.4189189189189189,\n",
-       " 'Olivia Carleton': 0.3780487804878049,\n",
-       " 'Flora Price': 0.3780487804878049,\n",
-       " 'E1': 0.36904761904761907,\n",
-       " 'E2': 0.36904761904761907,\n",
-       " 'E3': 0.3974358974358974,\n",
-       " 'E4': 0.3780487804878049,\n",
-       " 'E5': 0.4189189189189189,\n",
-       " 'E6': 0.484375,\n",
-       " 'E7': 0.5166666666666667,\n",
-       " 'E8': 0.5961538461538461,\n",
-       " 'E9': 0.5535714285714286,\n",
-       " 'E10': 0.3875,\n",
-       " 'E11': 0.3780487804878049,\n",
-       " 'E12': 0.3974358974358974,\n",
-       " 'E13': 0.36904761904761907,\n",
-       " 'E14': 0.36904761904761907}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      Score\n",
+      "E8                 0.596154\n",
+      "E9                 0.553571\n",
+      "Evelyn Jefferson   0.516667\n",
+      "Nora Fayette       0.516667\n",
+      "E7                 0.516667\n",
+      "Theresa Anderson   0.516667\n",
+      "Sylvia Avondale    0.500000\n",
+      "E6                 0.484375\n",
+      "Laura Mandeville   0.469697\n",
+      "Katherina Rogers   0.469697\n",
+      "Brenda Rogers      0.469697\n",
+      "Helen Lloyd        0.469697\n",
+      "Ruth DeSand        0.455882\n",
+      "Verne Sanderson    0.455882\n",
+      "Myra Liddel        0.442857\n",
+      "Frances Anderson   0.430556\n",
+      "Eleanor Nye        0.430556\n",
+      "Pearl Oglethorpe   0.430556\n",
+      "E5                 0.418919\n",
+      "Dorothy Murchison  0.418919\n",
+      "E12                0.397436\n",
+      "E3                 0.397436\n",
+      "E10                0.387500\n",
+      "Charlotte McDowd   0.387500\n",
+      "E11                0.378049\n",
+      "Olivia Carleton    0.378049\n",
+      "E4                 0.378049\n",
+      "Flora Price        0.378049\n",
+      "E2                 0.369048\n",
+      "E1                 0.369048\n",
+      "E13                0.369048\n",
+      "E14                0.369048\n"
+     ]
     }
    ],
    "source": [
-    "nx.closeness_centrality(G)"
+    "nCent=nx.closeness_centrality(G)\n",
+    "nc=pd.DataFrame.from_dict(nCent,orient='index', columns=['Score'])\n",
+    "nc=nc.sort_values(by='Score',ascending=False)\n",
+    "print(nc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The network shows the logit who joins many more meetings, who has more friends seems not 100% truth. For a few people in the social network do not very activtive in joinning events, still has many friends. \n",
+    "Those active women make more friends and build stronger relation with freinds comparing to less active women. However, the less active women who have many friends, do not build a strong relation with the others. "
    ]
   },
   {
@@ -484,88 +501,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
