--- a/project_2/Speed Dating Experiment.ipynb
+++ b/project_2/Speed Dating Experiment.ipynb
@@ -377,13 +377,13 @@
     "Women seem between two groups of men in the network,not having high intrested nor low intrested intreacting with opposite sex. But men are divided into two diffierent group, high interested and low intrestedd in dating opposite sex. \n",
     "\n",
     "\n",
-    "#20 (man) has 9 women interested in dating with him, but he did not select a sigle woman. \n",
+    "20 (man) has 9 women interested in dating with him, but he did not select a sigle woman. \n",
     "\n",
-    "#3 (woman) and #11 (man) whom have a few opposite sex intrested in them, but they didn't want to date anyone in this group. \n",
+    "3 (woman) and 11 (man) whom have a few opposite sex intrested in them, but they didn't want to date anyone in this group. \n",
     "\n",
-    "#18, #17, #12 these men are tend to be more attracted in women group.\n",
+    "18, 17, 12 these men are tend to be more attracted in women group.\n",
     "\n",
-    "#15, #16, #19, #14 and #13 these men have broad intrested in women group. "
+    "15, 16, 19, 14 and 13 these men have broad intrested in women group. "
    ]
   },
   {
