--- a/project_2/Speed Dating Experiment.ipynb
+++ b/project_2/Speed Dating Experiment.ipynb
@@ -388,6 +388,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dating1[['iid','gender','age','career']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -852,28 +868,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "intrests=dating1[['iid','sports', 'tvsports', 'exercise', 'dining', 'museums','art', 'hiking', 'gaming', 'clubbing', 'reading', 'tv', 'theater',\n",
+    "       'movies', 'concerts', 'music', 'shopping', 'yoga']]\n",
+    "intrests=intrests.dropna(how='any',axis=0)\n",
+    "intrests=intrests.drop_duplicates()\n",
+    "intrests.set_index('iid',inplace=True) \n",
+    "print(intrests)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "intrests=dating1[['iid','sports', 'tvsports', 'exercise', 'dining', 'museums','art', 'hiking', 'gaming', 'clubbing', 'reading', 'tv', 'theater',\n",
+    "       'movies', 'concerts', 'music', 'shopping', 'yoga']]\n",
+    "intrests=intrests.dropna(how='any',axis=0)\n",
+    "intrests=intrests.drop_duplicates()\n",
+    "intrests.set_index('iid',inplace=True) \n",
+    "print(intrests)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Background"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "background=dating1[['iid','gender','age','career']]\n",
+    "background=background.drop_duplicates()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     iid  gender   age                                           career\n",
+      "0      1       0  21.0                                           lawyer\n",
+      "10     2       0  24.0                                              law\n",
+      "20     3       0  25.0                                        Economist\n",
+      "30     4       0  23.0                               lawyer/policy work\n",
+      "40     5       0  21.0                                           lawyer\n",
+      "50     6       0  23.0                                           lawyer\n",
+      "60     7       0  22.0                                              Law\n",
+      "70     8       0  25.0                                       Journalist\n",
+      "80     9       0  26.0                      Congresswoman, and comedian\n",
+      "90    10       0  26.0  To create early childhood intervention programs\n",
+      "100   11       1  27.0                Academia, Research, Banking, Life\n",
+      "110   12       1  22.0                                 Corporate Lawyer\n",
+      "120   13       1  22.0                                           Lawyer\n",
+      "130   14       1  23.0                               Corporate attorney\n",
+      "140   15       1  24.0                                           Lawyer\n",
+      "150   16       1  25.0                      research/financial industry\n",
+      "160   17       1  30.0                          academics or journalism\n",
+      "170   18       1  27.0                               Financial Services\n",
+      "180   19       1  28.0                                              ceo\n",
+      "190   20       1  24.0                                              CEO\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(background)"
+   ]
   },
   {
    "cell_type": "code",
