--- a/project_2/Speed Dating Experiment.ipynb
+++ b/project_2/Speed Dating Experiment.ipynb
@@ -900,44 +900,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "background=dating1[['iid','gender','age','career']]\n",
-    "background=background.drop_duplicates()\n"
+    "background=background.drop_duplicates()\n",
+    "background.set_index('iid',inplace=True) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     iid  gender   age                                           career\n",
-      "0      1       0  21.0                                           lawyer\n",
-      "10     2       0  24.0                                              law\n",
-      "20     3       0  25.0                                        Economist\n",
-      "30     4       0  23.0                               lawyer/policy work\n",
-      "40     5       0  21.0                                           lawyer\n",
-      "50     6       0  23.0                                           lawyer\n",
-      "60     7       0  22.0                                              Law\n",
-      "70     8       0  25.0                                       Journalist\n",
-      "80     9       0  26.0                      Congresswoman, and comedian\n",
-      "90    10       0  26.0  To create early childhood intervention programs\n",
-      "100   11       1  27.0                Academia, Research, Banking, Life\n",
-      "110   12       1  22.0                                 Corporate Lawyer\n",
-      "120   13       1  22.0                                           Lawyer\n",
-      "130   14       1  23.0                               Corporate attorney\n",
-      "140   15       1  24.0                                           Lawyer\n",
-      "150   16       1  25.0                      research/financial industry\n",
-      "160   17       1  30.0                          academics or journalism\n",
-      "170   18       1  27.0                               Financial Services\n",
-      "180   19       1  28.0                                              ceo\n",
-      "190   20       1  24.0                                              CEO\n"
+      "     gender   age                                           career\n",
+      "iid                                                               \n",
+      "1         0  21.0                                           lawyer\n",
+      "2         0  24.0                                              law\n",
+      "3         0  25.0                                        Economist\n",
+      "4         0  23.0                               lawyer/policy work\n",
+      "5         0  21.0                                           lawyer\n",
+      "6         0  23.0                                           lawyer\n",
+      "7         0  22.0                                              Law\n",
+      "8         0  25.0                                       Journalist\n",
+      "9         0  26.0                      Congresswoman, and comedian\n",
+      "10        0  26.0  To create early childhood intervention programs\n",
+      "11        1  27.0                Academia, Research, Banking, Life\n",
+      "12        1  22.0                                 Corporate Lawyer\n",
+      "13        1  22.0                                           Lawyer\n",
+      "14        1  23.0                               Corporate attorney\n",
+      "15        1  24.0                                           Lawyer\n",
+      "16        1  25.0                      research/financial industry\n",
+      "17        1  30.0                          academics or journalism\n",
+      "18        1  27.0                               Financial Services\n",
+      "19        1  28.0                                              ceo\n",
+      "20        1  24.0                                              CEO\n"
      ]
     }
    ],
