--- a/project_2/Speed Dating Experiment.ipynb
+++ b/project_2/Speed Dating Experiment.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "200"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,30 +376,11 @@
     "\n",
     "Women seem between two groups of men in the network,not having high intrested nor low intrested intreacting with opposite sex. But men are divided into two diffierent group, high interested and low intrestedd in dating opposite sex. \n",
     "\n",
+    "1. Women have similar mate choices, while men have relatively large differences in mate selection criteria.\n",
     "\n",
-    "20 (man) has 9 women interested in dating with him, but he did not select a sigle woman. \n",
+    "2. The most popular male student is 20,19,17.\n",
     "\n",
-    "3 (woman) and 11 (man) whom have a few opposite sex intrested in them, but they didn't want to date anyone in this group. \n",
-    "\n",
-    "18, 17, 12 these men are tend to be more attracted in women group.\n",
-    "\n",
-    "15, 16, 19, 14 and 13 these men have broad intrested in women group. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dating1[['iid','gender','age','career']]\n"
+    "3. The most popular girls are 1,6,2."
    ]
   },
   {
@@ -664,9 +645,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From above, we observed men in general were in two extrem charaters, very active in social relationship or very unactive. And women in general were just at between two man groups, not very active, not unactive.   \n",
+    "This Eigen_cent result measures the attractiveness of individuals and the opposite sex. Men No. 19 and No. 20 are the subjects of choice for all women, but on the 19th, all women are selected, while on the 20th, no women are selected. No. 8 and No. 9 among women are relatively strong.\n",
     "\n",
-    "#19, #20, #14 top 3 are the people among 20 people who have the high intraction / connection with other people. #15, #16, #18 has the least interaction in the relationship. "
+    "Male No. 13, No. 14, No. 15, No. 16, No. 17, No. 18, No. 19, choose all women. The target of male choice is not clear.\n",
+    "\n",
+    "There is a clearer direction for women to choose targets than men. Exception No. 9.\n",
+    "\n",
+    "3(woman), 11 (man), 20(man) are not intrested in anyone in the network."
    ]
   },
   {
@@ -769,6 +754,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There is a significant difference in the choice of males and females for the opposite sex."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Intrests"
    ]
   },
@@ -864,31 +856,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "intrests=dating1[['iid','sports', 'tvsports', 'exercise', 'dining', 'museums','art', 'hiking', 'gaming', 'clubbing', 'reading', 'tv', 'theater',\n",
-    "       'movies', 'concerts', 'music', 'shopping', 'yoga']]\n",
-    "intrests=intrests.dropna(how='any',axis=0)\n",
-    "intrests=intrests.drop_duplicates()\n",
-    "intrests.set_index('iid',inplace=True) \n",
-    "print(intrests)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intrests=dating1[['iid','sports', 'tvsports', 'exercise', 'dining', 'museums','art', 'hiking', 'gaming', 'clubbing', 'reading', 'tv', 'theater',\n",
-    "       'movies', 'concerts', 'music', 'shopping', 'yoga']]\n",
-    "intrests=intrests.dropna(how='any',axis=0)\n",
-    "intrests=intrests.drop_duplicates()\n",
-    "intrests.set_index('iid',inplace=True) \n",
-    "print(intrests)"
+    "Hobbies have little effect on attracting the opposite sex."
    ]
   },
   {
@@ -955,20 +926,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -979,7 +936,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "we observe that a man’s demand for intelligence and ambition does not extend to women who are more intelligent or ambitious than he is. In fact, a man is significantly less likely to accept a woman who is more ambitious than he. Finally, women prefer men who grew up in wealthier neighborhoods, while men express no such preference."
+    "The educational background of the small group is similar to the standard of the mate in the real world.\n",
+    "\n",
+    "In a speed dating:\n",
+    "\n",
+    "In the decision to choose a mate, women are more concerned about social status, and the qualifier standard table is similar and clear.\n",
+    "From the point of view of the opposite sex attracting expectations, men pay more attention to appearance, but there is no target in short-term communication."
    ]
   },
   {
