--- a/project_2/Speed Dating Experiment.ipynb
+++ b/project_2/Speed Dating Experiment.ipynb
@@ -929,7 +929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Finding (template)"
+    "###  Conclusion"
    ]
   },
   {
