--- a/project_2/Speed Dating Experiment.ipynb
+++ b/project_2/Speed Dating Experiment.ipynb
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Our intrested"
+    "## Our Intrested"
    ]
   },
   {
@@ -140,21 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Are shared interests more important than a shared racial background?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Can people accurately predict their own perceived value in the dating market?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Python Code"
+    "## PART I : NETWORKS"
    ]
   },
   {
@@ -168,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selecte 1st group Data"
+    "### Step 1: Selecte 1st group Data"
    ]
   },
   {
@@ -240,6 +226,13 @@
    "source": [
     "#since women and men will meet everyone at one time, it should be 10*10*2.\n",
     "len(dating1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step2: Edges "
    ]
   },
   {
@@ -331,6 +324,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Graph "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
@@ -382,6 +382,13 @@
     "2. The most popular male student is 20,19,17.\n",
     "\n",
     "3. The most popular girls are 1,6,2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4: Centrality "
    ]
   },
   {
@@ -666,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Find Comments"
+    "## PART II: Comments"
    ]
   },
   {
@@ -680,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clustering criterias about willing-to-date parnter"
+    "### Step 1: Clustering Criterias"
    ]
   },
   {
@@ -762,14 +769,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a significant difference in the choice of males and females for the opposite sex."
+    "Again, # 1 from # 10 (from 0 to 9 in the chart above) are women and # 11 to # 20 (from 10 to 19 in chart above) are men. Most women are clustered in the right branched while most men are clustered on the middle branch.  What men are women look for are very different.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clustering common interests about the willing-to-date partner "
+    "### Step 2: Clustering Interests"
    ]
   },
   {
@@ -867,14 +874,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hobbies have little effect on attracting the opposite sex."
+    "Hobbies have little effect on attracting the opposite sex.\n",
+    "For example\n",
+    "Woman # 10 and Man # 12 (clustered 9 --- 11 in above chart) and woman # 1 and man # 18 (clustered 0 --- 17), they have similar hobbies but they do not choose to date each other (See step [8] for edge printing)    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Background"
+    "### Step 3: Background"
    ]
   },
   {
@@ -924,6 +933,42 @@
    ],
    "source": [
     "print(background)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The most wanted men # 19 and # 20 are CEO.  The most wanted women # 8 and # 9 are journalist and congresswomn (and comedian) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The career background seems to play very important role in dating preference.  \n",
+    "\n",
+    "In a speed dating:\n",
+    "\n",
+    "For women to choose a willing-to-date partner, men with high career status are most attractive.\n",
+    "\n",
+    "For men, it seems they pay more attention to appearance and how women express themselve (Jouranlist and congresswomn).\n",
+    "\n",
+    "And these are different from their initial dating preference at the begining about Attractiveness, Sincerity, Intelligence, Fun, Ambition, and Shared Interests.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra Work"
    ]
   },
   {
@@ -1075,26 +1120,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Conclusion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The educational background of the small group is similar to the standard of the mate in the real world.\n",
-    "\n",
-    "In a speed dating:\n",
-    "\n",
-    "In the decision to choose a mate, women are more concerned about social status, and the qualifier standard table is similar and clear.\n",
-    "\n",
-    "From the point of view of the opposite sex attracting expectations, men pay more attention to appearance, but there is no target in short-term communication."
-   ]
   },
   {
    "cell_type": "code",
